# Ex2

./: CMakeLists.txt
.github/workflows/: release.yml
src/: CMakeLists.txt  main.cpp
